# axum-grpc-example

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  start.sh
.sqlx/: query-7b0ed0aa54adde78e3e81e86064f7dedcdc3da6e3f746bc1878d8b6e8f405878.json
migrations/: 001_create_counter.sql
proto/: counter.proto
src/: grpc.rs  main.rs  postgres.rs
