[package]
name = "axum-grpc-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.11"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[build-dependencies]
tonic-build = "0.11"
